# msfitslib_core

./: CMakeLists.txt  README.md  bg_date.cpp  bg_date.h  bg_fits.cpp  bg_fits.h  bg_geo.cpp  bg_globals.cpp  bg_globals.h  bg_norm.cpp  bg_vis.cpp  bg_vis.h  calsol_values.cpp  calsol_values.h  cvalue_vector.cpp  cvalue_vector.h  doy2local.cpp  gfit.h  libnova_interface.cpp  libtest.cpp  msfitslib.h  nan_test.cpp  radec2azh.cpp  sid2ux.cpp  sighorns.h  spectrometer.cpp  spectrometer.h  ux2sid.cpp  ux2sid_file.cpp  vector.cpp  vector.h
